# event_hub

./: .dockerignore  .env.example  .gitignore  Makefile  README-RU.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
api/: Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 02e5882609c4_initial_schema.py  136a937e6b7b_add_notifications_table.py  5361da07305c_convert_event_and_notification_ids_to_.py
api/app/: cache.py  config.py  database.py  dependencies.py  main.py  redis_client.py  security.py
api/app/models/: event.py  notification.py  registration.py  user.py
api/app/routers/: auth.py  events.py  notifications.py
api/app/schemas/: event.py  notification.py  registration.py  user.py
api/app/services/: auth.py  event_cache.py  events.py  notification_cache.py  notifications.py  registrations.py
api/app/worker/: enqueue.py  settings.py
api/app/worker/tasks/: __init__.py  auth.py  events.py  notifications.py  registrations.py
api/tests/: .env.test.example  conftest.py  test_auth.py  test_events.py
docker/postgres/: init-test-db.sql
nginx/: nginx.conf
web/: Dockerfile  i18n.options.ts  ionic.config.json  nuxt.config.ts  package.json
web/app/: app.vue
web/app/assets/styles/: main.scss
web/app/components/auth/: AuthLogin.vue  (+1 more)
web/app/composables/: useApi.ts  useApiError.ts  useEventsFilters.ts  useEventsList.ts  useLocalization.ts  usePageContent.ts  usePagination.ts
web/app/layouts/: default.vue  main.vue
web/app/mappers/: indexFooter.ts  indexPage.ts  mainHeader.ts
web/app/middleware/: auth.global.ts
web/app/pages/: auth.vue  index.vue  main.vue
web/app/stores/: auth.ts  events.ts  notifications.ts  selectedEvent.ts
web/app/types/: event.ts  indexFooter.ts  indexPage.ts  localizedPage.ts  mainHeader.ts
web/data/components/: indexFooter.json  mainHeader.json
web/data/pages/: index.json
(+17 files in other folders)
